# lele-window-sync

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  qrcode_b64.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  window-sync.exe.manifest
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
