[package]
name = "window-sync"
version = "0.1.0"
description = "Windows 11 Window Synchronizer"
authors = ["you"]
edition = "2021"

[package.metadata.bundle]
identifier = "com.windowsync.app"
icon = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.icns", "icons/icon.ico"]

[lib]
name = "window_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "window-sync"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell  = "2"
tauri-plugin-dialog = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
once_cell          = "1"
parking_lot        = "0.12"
windows            = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"       # 最小体积优化
lto = true             # 链接时优化
codegen-units = 1      # 单代码生成单元，减小体积
panic = "abort"        # 去掉 panic 展开代码
strip = true           # 去掉调试符号
